--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       html, body {
         margin:0;
         padding:0;
-        background-color: #222;
+        background-color: rgb(0, 0, 0);
       } 
 
       
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Marvel and DC Universes</title>
+    <title>Marvel & DC Universe</title>
   </head>
   <body>
     <div id="root"></div>
