--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,14 @@
 
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     
-    <meta property="og:image" content="%PUBLIC_URL%/legend.png"/>
+    <meta property="og:title" content="Marvel & Dc Universe">
+    <meta property="og:description" content="Visualize network and explore their super abilities, occupations, gender and more.">
+    <meta property="og:image" content="https://heberleh.github.io/comics-universe/legend.png">
+    <meta property="og:url" content="https://heberleh.github.io/comics-universe/">
 
-    <meta name="description" CONTENT="Visualization of Marvel and DC comic characters. Understanding gender, super abilities, occupations, children and partners connections and more. Visualize and compare Marvel and DC networks.">
+    <meta name="description" CONTENT="Visualization of Marvel and DC comic characters.
+    Understanding gender, super abilities, occupations, children and partners connections and more.
+    Visualize and compare Marvel and DC networks.">
 
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">    
 
